<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightblue"
    tools:context=".AlmostThereActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/background"
            android:textSize="35sp"
            android:gravity="center"
            android:layout_marginTop="200dp"
            android:text="@string/almost_there"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/thank_you"
            android:textColor="@color/background"
            android:gravity="center"
            android:layout_marginTop="18dp"/>

        <Button
            android:id="@+id/btn_verif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:onClick="OnClickVerif"
            android:text="@string/verify"
            android:textColor="@color/background"
            android:background="@drawable/transparent_button"
            />

    </LinearLayout>

</LinearLayout>